Fix second CountOperation test